# ltb-fingerboard-designer

./: .gitignore  README.md  pyproject.toml  requirements.txt
client/: index.html
frontend/: README.md
scripts/: populate_imports.py
server/: .env.example  requirements.txt
server/app/: main.py
src/ltb_fingerboard/: __init__.py  main.py
src/ltb_fingerboard/api/: fretwork_router.py
src/ltb_fingerboard/calculators/: __init__.py  fret_slots_cam.py  fret_slots_export.py  fret_slots_fan_cam.py
src/ltb_fingerboard/core/: __init__.py  safety.py
src/ltb_fingerboard/data_registry/: __init__.py  registry.py
src/ltb_fingerboard/instrument_geometry/: __init__.py
src/ltb_fingerboard/instrument_geometry/body/: __init__.py
src/ltb_fingerboard/instrument_geometry/neck/: __init__.py
src/ltb_fingerboard/rmos/: __init__.py  context.py
src/ltb_fingerboard/schemas/: cam_fret_slots.py
