[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ltb-fingerboard-designer"
version = "0.1.0"
description = "Scale length, compound radius, fret math, nut slots, and fretwork API — published from luthiers-toolbox"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi>=0.100",
  "uvicorn[standard]>=0.22",
  "pydantic>=2",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
